--- a/client/css/main.css
+++ b/client/css/main.css
@@ -1,3 +1,25 @@
 body {
     background-color: #80d4ff;
 }
+
+h1 {
+    font-size: 60px;
+}
+
+.topBox {
+    font-family: 'Inknut Antiqua', serif;
+    margin-top: 100px;
+    text-align: center;
+}
+.user {
+	border-left: 6px solid #99ddff;
+	margin: 0 auto;
+	padding: 0 20px;
+	width: 1000px;
+}
+
+.user li {
+	background-color: #cceeff;
+	font-size: 20px;
+	margin: 0 0 10px 0;
+}
